# typst-alexandria

./: CHANGELOG.md  Justfile  README.md  typst.toml
.github/workflows/: tests.yml
docs/: bibliography.bib  manual.typ  thumbnail.typ
gallery/: example.typ  thumbnail.typ
plugin/: Cargo.toml
plugin/src/: lib.rs  model.rs  read.rs
plugin/src/model/: wrapper.rs
src/: alexandria.wasm  hayagriva.typ  lib.typ  state.typ
tests/: test-utils.typ
tests/apa-de-full/: ref.typ  test.typ
tests/apa-de-partial/: ref.typ  test.typ
tests/apa-full/: ref.typ  test.typ
tests/apa-partial/: ref.typ  test.typ
tests/canary-ieee/: ref.typ  test.typ
tests/chicago-partial/: ref.typ  test.typ
tests/custom-ieee/: ref.typ  test.typ
tests/details/: ref.typ  test.typ
tests/filtered/: books.bib  ref.typ  test.typ
tests/hayagriva-280/: bib.yaml  not-ref.typ  ref.typ  style.csl  test.typ
tests/ieee-de-full/: ref.typ  test.typ
tests/ieee-de-partial/: ref.typ  test.typ
tests/ieee-full/: ref.typ  test.typ
tests/ieee-mixed/: ref.typ  test.typ
tests/ieee-partial/: ref.typ  test.typ
tests/inline/: ref.typ  test.typ
tests/issue-17/: ref.typ  refs.bib  test.typ
tests/math-markup/: ref.typ  refs.yaml  test.typ
tests/unit/: test.typ
